crates/edifact-rs-derive/tests/ui/fail_qualifier_conflict.stderr
error: use either #[edifact(qualifier = ...)] or #[edifact(qualifier_from = ...)], not both
  --> tests/ui/fail_qualifier_conflict.rs:15:47
   |
15 | #[edifact(segment = "RFF", qualifier = "AGI", qualifier_from = 0)]
   |                                               ^^^^^^^^^^^^^^
